# learning-lab

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
code/: code_agent.py  test_trello_client.ipynb  tools.py  trello_agent.py  web_agent.py
documentation/py-trello/: index.txt  modules.txt  trello.txt
